--- a/Remage/Storyboards/Base.lproj/Main.storyboard
+++ b/Remage/Storyboards/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VAv-3m-RwU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VAv-3m-RwU">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -76,70 +76,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qWF-DU-zep" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-11" y="457"/>
-        </scene>
-        <!--Testing Colors View Controller-->
-        <scene sceneID="bBe-wr-He0">
-            <objects>
-                <viewController id="N1x-qq-8Y9" customClass="TestingColorsViewController" customModule="Remage" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8rO-Uf-Wb4">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eKa-zx-30z">
-                                <rect key="frame" x="20" y="239" width="374" height="418"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAq-jJ-Dj9">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="36"/>
-                                        <color key="backgroundColor" red="0.65308709229061734" green="1" blue="0.6834813114101197" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Font Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qS1-qj-0Jz">
-                                        <rect key="frame" x="0.0" y="36" width="374" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <color key="textColor" red="0.097659937130192415" green="0.25908153550000002" blue="0.17394169708638677" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ml-RR-lIQ">
-                                        <rect key="frame" x="0.0" y="72" width="374" height="346"/>
-                                        <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Some text" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iK6-aa-78B">
-                                                <rect key="frame" x="40" y="40" width="294" height="34"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <constraints>
-                                            <constraint firstItem="iK6-aa-78B" firstAttribute="leading" secondItem="6Ml-RR-lIQ" secondAttribute="leading" constant="40" id="FLQ-YC-h9l"/>
-                                            <constraint firstItem="iK6-aa-78B" firstAttribute="top" secondItem="6Ml-RR-lIQ" secondAttribute="top" constant="40" id="TUF-mB-BKA"/>
-                                            <constraint firstAttribute="trailing" secondItem="iK6-aa-78B" secondAttribute="trailing" constant="40" id="fXk-hW-zSD"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" red="0.01134884662" green="0.1982780522" blue="0.25908153550000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </stackView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.79603973082722412" green="1" blue="0.79816184800426626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="eKa-zx-30z" firstAttribute="leading" secondItem="UNy-3U-uLY" secondAttribute="leading" constant="20" id="HnL-6J-Eos"/>
-                            <constraint firstItem="eKa-zx-30z" firstAttribute="top" secondItem="UNy-3U-uLY" secondAttribute="top" constant="200" id="TUw-0h-KiX"/>
-                            <constraint firstItem="UNy-3U-uLY" firstAttribute="bottom" secondItem="eKa-zx-30z" secondAttribute="bottom" constant="200" id="oFq-UP-Dtd"/>
-                            <constraint firstItem="UNy-3U-uLY" firstAttribute="trailing" secondItem="eKa-zx-30z" secondAttribute="trailing" constant="20" id="xVG-iV-pNi"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="UNy-3U-uLY"/>
-                    </view>
-                    <connections>
-                        <outlet property="cardColorLabel" destination="eAq-jJ-Dj9" id="5Mg-GI-L6n"/>
-                        <outlet property="emptyView" destination="6Ml-RR-lIQ" id="2sw-YW-Pud"/>
-                        <outlet property="fontColorLabel" destination="qS1-qj-0Jz" id="tFA-Gt-mwh"/>
-                        <outlet property="someTextField" destination="iK6-aa-78B" id="xyG-hi-dnM"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gpH-ne-tQV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1139" y="-27"/>
         </scene>
     </scenes>
 </document>
